[package]
name = "upt"
version = "1.0.0"
edition = "2025"
authors = ["xeddmc"]
description = "Universal package management tool for any OS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xeddmc/upt"
repository = "https://github.com/xeddmc/upt"
categories = ["command-line-utilities"]
keywords = ["universal", "package", "management"]

[dependencies]
which = "6.0.3"  # Updated to latest version

[profile.release]
lto = true
strip = true
opt-level = "z"
